added analytics
